--- a/DietProject/DayNorms.ru.resx
+++ b/DietProject/DayNorms.ru.resx
@@ -58,13 +58,25 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="DNNumericUpDown.Size" type="System.Drawing.Size, System.Drawing">
-    <value>82, 23</value>
-  </data>
-  <data name="DNSubstanceComboBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>595, 23</value>
+  <data name="DNNumericUpDown.Location" type="System.Drawing.Point, System.Drawing">
+    <value>501, 357</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="DNNumericUpDown.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
+  </data>
+  <data name="DNNumericUpDown.Size" type="System.Drawing.Size, System.Drawing">
+    <value>117, 31</value>
+  </data>
+  <data name="DNSubstanceComboBox.Location" type="System.Drawing.Point, System.Drawing">
+    <value>149, 268</value>
+  </data>
+  <data name="DNSubstanceComboBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
+  </data>
+  <data name="DNSubstanceComboBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>848, 33</value>
+  </data>
   <data name="DNAddButton.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
   </data>
@@ -74,8 +86,14 @@
   <data name="DNAddButton.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
+  <data name="DNAddButton.Location" type="System.Drawing.Point, System.Drawing">
+    <value>520, 451</value>
+  </data>
+  <data name="DNAddButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
+  </data>
   <data name="DNAddButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>97, 38</value>
+    <value>139, 63</value>
   </data>
   <data name="DNAddButton.Text" xml:space="preserve">
     <value>Добавить</value>
@@ -90,11 +108,47 @@
   <data name="DNSubstanceChoiceLabel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
+  <data name="DNSubstanceChoiceLabel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>237, 198</value>
+  </data>
+  <data name="DNSubstanceChoiceLabel.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
+  </data>
   <data name="DNSubstanceChoiceLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>435, 21</value>
+    <value>676, 32</value>
   </data>
   <data name="DNSubstanceChoiceLabel.Text" xml:space="preserve">
     <value>Выберите признак-вещество для задания суточной нормы:</value>
+  </data>
+  <data name="DNSizeLabel.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="DNSizeLabel.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 12pt</value>
+  </data>
+  <data name="DNSizeLabel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="DNSizeLabel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>633, 353</value>
+  </data>
+  <data name="DNSizeLabel.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
+  </data>
+  <data name="DNSizeLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>35, 32</value>
+  </data>
+  <data name="DNSizeLabel.TabIndex" type="System.Int32, mscorlib">
+    <value>8</value>
+  </data>
+  <data name="DNSizeLabel.Text" xml:space="preserve">
+    <value>кг</value>
+  </data>
+  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
+    <value>10, 25</value>
+  </data>
+  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
+    <value>1143, 750</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -2857,5 +2911,8 @@
         AAAAoQAAALMAAAC2AAAAMwAAAAAAAAAAAAAAAAAAAADwjwAA8I8AAPAvAADwLwAA8C8AAPCPAADwjwAA
         8I8AAPCHAADgJwAA5jcAAOA3AADgJwAA4CcAAOAHAADgDwAA
 </value>
+  </data>
+  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
 </root>
