--- a/DietProject/MainScreen.ru.resx
+++ b/DietProject/MainScreen.ru.resx
@@ -100,7 +100,7 @@
     <value>447, 80</value>
   </data>
   <data name="ButtonToTS.Text" xml:space="preserve">
-    <value>Ввести исходные данные задачи</value>
+    <value>Решатель задачи</value>
   </data>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>10, 25</value>
@@ -2869,9 +2869,6 @@
         AAAAoQAAALMAAAC2AAAAMwAAAAAAAAAAAAAAAAAAAADwjwAA8I8AAPAvAADwLwAA8C8AAPCPAADwjwAA
         8I8AAPCHAADgJwAA5jcAAOA3AADgJwAA4CcAAOAHAADgDwAA
 </value>
-  </data>
-  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 5, 4, 5</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Проектирование рациона питания</value>
