--- a/DietProject/TaskSolver.ru.resx
+++ b/DietProject/TaskSolver.ru.resx
@@ -3009,6 +3009,6 @@
 </value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Решатель задачи</value>
+    <value>Система решения задачи</value>
   </data>
 </root>
